--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <!-- 引入monikai.css -->
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
-
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css"
