--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <!-- Footer -->
-<footer class="py-3 bg-dark" id="footer">
+<footer class="py-3 bg-secondary" id="footer">
     <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; www.dusaiphoto.com 2019-2020</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; www.XJYandHYH.zone 2020-2021</h5>
     </div>
 </footer>
