--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,10 @@
 {% load notifications_tags %}
 {% notifications_unread as unread_count %}
-
 <!-- 定义导航栏 -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
     <div class="container">
         <!-- 导航栏商标 -->
-        <a class="navbar-brand" href="#">杜赛的个人网站</a>
+        <a class="navbar-brand" href="#">何原昊的个人网站</a>
         <!-- 导航入口 -->
         <div>
             <ul class="navbar-nav">
@@ -32,7 +31,7 @@
                             {{ user.username }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url "notice:list" %}">通知
+                            <a class="dropdown-item" href="{% url 'notice:list' %}">通知
                                 {% if unread_count %}
                                     <span class="badge badge-danger">{{ unread_count }}</span>
                                 {% endif %}
